c_lib/source/include/libphonenumber_sys_c_phonemetadata.h

LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_GetTypeName_to_output(const i18n::phonenumbers::PhoneNumberDesc* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* output);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_IsInitialized(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_MergeFrom(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const i18n::phonenumbers::PhoneNumberDesc* from);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_New_arena(const i18n::phonenumbers::PhoneNumberDesc* this_ptr, google::protobuf::Arena* arena);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_New_no_args(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_Swap(i18n::phonenumbers::PhoneNumberDesc* this_ptr, i18n::phonenumbers::PhoneNumberDesc* other);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_add_possible_length(i18n::phonenumbers::PhoneNumberDesc* this_ptr, int value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_add_possible_length_local_only(i18n::phonenumbers::PhoneNumberDesc* this_ptr, int value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_clear_example_number(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_clear_national_number_pattern(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_clear_possible_length(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_clear_possible_length_local_only(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_clear_possible_number_pattern(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_constructor_from(const i18n::phonenumbers::PhoneNumberDesc* from, i18n::phonenumbers::PhoneNumberDesc* output);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_constructor_no_args(i18n::phonenumbers::PhoneNumberDesc* output);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_default_instance();
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_delete(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_destructor(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_example_number(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_has_example_number(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_has_national_number_pattern(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_has_possible_number_pattern(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_mutable_example_number(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_mutable_national_number_pattern(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_mutable_possible_number_pattern(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_mutable_unknown_fields(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_national_number_pattern(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_new_from(const i18n::phonenumbers::PhoneNumberDesc* from);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_new_no_args();
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_operator_assign(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const i18n::phonenumbers::PhoneNumberDesc* from);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_possible_length_local_only_size(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_possible_length_size(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_possible_number_pattern(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_release_example_number(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_release_national_number_pattern(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_release_possible_number_pattern(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_allocated_example_number(i18n::phonenumbers::PhoneNumberDesc* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* example_number);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_allocated_national_number_pattern(i18n::phonenumbers::PhoneNumberDesc* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* national_number_pattern);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_allocated_possible_number_pattern(i18n::phonenumbers::PhoneNumberDesc* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* possible_number_pattern);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_example_number_char(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_example_number_char_unsigned_long(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_example_number_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_national_number_pattern_char(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_national_number_pattern_char_unsigned_long(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_national_number_pattern_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_possible_length(i18n::phonenumbers::PhoneNumberDesc* this_ptr, int index, int value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_possible_length_local_only(i18n::phonenumbers::PhoneNumberDesc* this_ptr, int index, int value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_possible_number_pattern_char(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_possible_number_pattern_char_unsigned_long(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_possible_number_pattern_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_unknown_fields(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_phonemetadata_G_i18n_phonenumbers_protobuf_AddDesc_phonemetadata_2eproto();
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_phonemetadata_G_i18n_phonenumbers_protobuf_AssignDesc_phonemetadata_2eproto();
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_phonemetadata_G_i18n_phonenumbers_protobuf_ShutdownFile_phonemetadata_2eproto();