src/ffi.rs

  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_GetTypeName_to_output(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, output: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_IsInitialized(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_MergeFrom(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, from: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_New_arena
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc,
     arena: *mut ::arena::google::protobuf::Arena)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_New_no_args
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_Swap(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, other: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_add_possible_length(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, value: libc::c_int);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_add_possible_length_local_only(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, value: libc::c_int);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_clear_example_number(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_clear_national_number_pattern(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_clear_possible_length(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_clear_possible_length_local_only(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_clear_possible_number_pattern(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_constructor_from(from: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, output: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_constructor_no_args(output: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_default_instance
    ()
      -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_delete(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_destructor(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_example_number
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_has_example_number(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_has_national_number_pattern(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_has_possible_number_pattern(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_mutable_example_number
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_mutable_national_number_pattern
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_mutable_possible_number_pattern
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_mutable_unknown_fields
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_national_number_pattern
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_new_from
    (from: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_new_no_args
    ()
      -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_operator_assign
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc,
     from: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_possible_length_local_only_size(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_possible_length_size(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_possible_number_pattern
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_release_example_number
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_release_national_number_pattern
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_release_possible_number_pattern
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_allocated_example_number(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, example_number: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_allocated_national_number_pattern(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, national_number_pattern: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_allocated_possible_number_pattern(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, possible_number_pattern: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_example_number_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_example_number_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_example_number_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_national_number_pattern_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_national_number_pattern_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_national_number_pattern_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_possible_length(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, index: libc::c_int, value: libc::c_int);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_possible_length_local_only(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, index: libc::c_int, value: libc::c_int);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_possible_number_pattern_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_possible_number_pattern_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_set_possible_number_pattern_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_unknown_fields
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_phonemetadata_G_i18n_phonenumbers_protobuf_AddDesc_phonemetadata_2eproto();
  pub fn libphonenumber_sys_c_phonemetadata_G_i18n_phonenumbers_protobuf_AssignDesc_phonemetadata_2eproto();
  pub fn libphonenumber_sys_c_phonemetadata_G_i18n_phonenumbers_protobuf_ShutdownFile_phonemetadata_2eproto();
